# lessons-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: build_and_deploy.yml  docker_build_push.yml  jenkins-on-commit.yml  run_tests.yml
alembic/: env.py
alembic/versions/: 1e53edde8a51_removed_lessoon_id_from_teacher.py  25579adec504_create_table_teacher.py  57ec6f6e68ce_lessons_time_is_now_time_instead_of_.py  671126a1084b_lessons_add_day_of_a_week.py  c4a4745d8b75_first_valueable_product_tables.py  ff0d0fded14c_add_place_and_lesson_tables.py
src/: main.py
src/api/: __init__.py
src/api/endpoints/: lessons.py  places.py  teachers.py
src/controllers/: crud.py  lessons_crud.py  places_crud.py  teachers_crud.py
src/core/: config.py  db.py  logger.py
src/models/: __init__.py  lesson.py  lesssons_with_places_and_teachers.py  place.py  teacher.py
src/schemas/: __init__.py  column_types.py  lesson.py  place.py  teacher.py  timetable.py
tests/logic/: test_lessons.py  test_sample.py  test_teacher.py
tests/status/: conftest.py  test_healths_check.py
