[tool.poetry]
name = "lessons-api"
version = "0.1.2"
description = ""
authors = ["TJesT <alexeynospid@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
colorlog = "^6.8.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.0"
alembic = "^1.13.1"
async-sqlalchemy = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"

[tool.pytest.ini_options]
testpaths = [
    "./tests/logic",
    "./tests/status",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
